--- a/public/items/conflict/baby-milk-iraq.html
+++ b/public/items/conflict/baby-milk-iraq.html
@@ -58,7 +58,23 @@
 			<div class="item-pages">
 				<h2>Baby Milk Factory Bags</h2>
 					
-				<img class="item-image" src="baby-milk-iraq.jpeg" alt="Caption">
+				<div class="thumbnail-container">
+					<img src="baby-milk-iraq.jpeg" id="baby-milk" alt="">
+
+					<div class="expanded-thumbnail-container">
+						<img id="expandedBabyMilk" style="width:100%">
+					</div>
+
+					<div class="thumbnail-row">
+						<div class="thumbnail-column">
+							<img src="baby-milk-iraq.jpeg" alt="" onclick="showBabyMilk(this);">
+						</div>
+
+						<div class="thumbnail-column">
+							<img src="baby-milk-iraq-2.jpeg" alt="" onclick="showBabyMilk(this);">
+						</div>
+					</div>
+				</div>
 
 				<div class="item-text-block">
 					<p class="item-text">
@@ -96,4 +112,6 @@
 		<script src='https://code.jquery.com/jquery-latest.min.js'></script>
 		
 		<script src="../../js/script.js"></script>
+
+		<script src="../../js/items.js"></script>
 	</body>
