--- a/public/items/conflict/bosnia-ids.html
+++ b/public/items/conflict/bosnia-ids.html
@@ -58,7 +58,55 @@
 			<div class="item-pages">
 				<h2>Bosnia Identification Cards</h2>
 
-				<img class="item-image" src="bosnia-ids.jpeg" alt="Caption">
+				<div class="thumbnail-container">
+					<img src="bosnia-ids.jpeg" id="bosnia-ids" alt="">
+	
+						<div class="expanded-thumbnail-container">
+							<img id="expandedBosniaIds" style="width:100%">
+						</div>	
+	
+						<div class="thumbnail-row">
+							<div class="thumbnail-column">
+								<img src="bosnia-ids.jpeg" alt="" onclick="showBosniaIds(this);">	
+							</div>
+							
+							<div class="thumbnail-column">
+								<img src="bosnia-ids-2.jpeg" alt="" onclick="showBosniaIds(this);">
+							</div>
+	
+							<div class="thumbnail-column" >
+								<img src="bosnia-ids-3.jpeg" alt="" onclick="showBosniaIds(this);">
+							</div>
+
+							<div class="thumbnail-column" >
+								<img src="bosnia-ids-4.jpeg" alt="" onclick="showBosniaIds(this);">
+							</div>
+						</div>
+
+						<div class="thumbnail-row">
+							<div class="thumbnail-column">
+								<img src="bosnia-ids-5.jpeg" alt="" onclick="showBosniaIds(this);">	
+							</div>
+								
+							<div class="thumbnail-column">
+								<img src="bosnia-ids-6.jpeg" alt="" onclick="showBosniaIds(this);">
+							</div>
+		
+							<div class="thumbnail-column" >
+								<img src="bosnia-ids-7.jpeg" alt="" onclick="showBosniaIds(this);">
+							</div>
+	
+							<div class="thumbnail-column" >
+								<img src="bosnia-ids-8.jpeg" alt="" onclick="showBosniaIds(this);">
+							</div>
+						</div>
+
+						<div class="thumbnail-row">
+							<div class="thumbnail-column">
+								<img src="bosnia-ids-9.jpeg" alt="" onclick="showBosniaIds(this);">	
+							</div>
+						</div>
+					</div>
 
 				<div class="item-text-block">
 					<p class="item-text"> 
@@ -96,5 +144,7 @@
 		<script src='https://code.jquery.com/jquery-latest.min.js'></script>
 		
 		<script src="../../js/script.js"></script>
+
+		<script src="../../js/items.js"></script>
 	</body>
 </html>
