--- a/public/items/conflict/bosnian-uniform.html
+++ b/public/items/conflict/bosnian-uniform.html
@@ -59,31 +59,24 @@
 				<h2>Pink Wool Uniform</h2>
 
 				<div class="thumbnail-container">
-					<img src="bosnian-uniform.jpeg" id="first-image" alt="Caption">
-
-					<span id="first-caption">Caption</span>
+					<img src="bosnian-uniform.jpeg" id="pink-uniform" alt="">
 
 					<div class="expanded-thumbnail-container">
-						<img id="expandedThumbnail" style="width:100%">
-
-						<div id="itemCaption"></div>
+						<img id="expandedPinkUniform" style="width:100%">
 					</div>	
 
 					<div class="thumbnail-row">
 						<div class="thumbnail-column">
-							<img src="bosnian-uniform.jpeg" alt="Caption 1" onclick="showThumbnail(this);">	
+							<img src="bosnian-uniform.jpeg" alt="" onclick="showPinkUniform(this);">	
 						</div>
 						
 						<div class="thumbnail-column">
-							<img src="bosnian-uniform-2.jpeg" alt="Caption 2" onclick="showThumbnail(this);">
+							<img src="bosnian-uniform-2.jpeg" alt="" onclick="showPinkUniform(this);">
 						</div>
 
 						<div class="thumbnail-column" >
-							<img src="bosnian-uniform-3.jpeg" alt="Caption 3" onclick="showThumbnail(this);">
+							<img src="bosnian-uniform-3.jpeg" alt="" onclick="showPinkUniform(this);">
 						</div>
-
-						<!-- <div class="thumbnail-column">
-						</div> -->
 					</div>
 				</div>
 				
