--- a/public/memorabilia-politics-obama.html
+++ b/public/memorabilia-politics-obama.html
@@ -443,3 +443,5 @@
 		</footer>
 		
 		<script src='https://code.jquery.com/jquery-latest.min.js'></script>
+
+		<script src="../script.js"></script>
