--- a/public/items/politics/1960-democratic-national-convention-tickets.html
+++ b/public/items/politics/1960-democratic-national-convention-tickets.html
@@ -19,13 +19,13 @@
 		<header>
 			<div class="clear">
 				<div class="title">
-					<h1 class="logo">Pre-1976 Politics</h1>
-				
+					<h1 class="logo-politics">Pre-1976 Politics</h1>
+						
 					<p>1776-1976</p>
 				</div>
-
-				<div class="headergraphic">
-					<img id="header-photo" src="#">
+		
+				<div class="headergraphic-politics">
+					<img class="politics-header-photo" src="../../images/Galleries/george-washington-portrait.jpeg">
 				</div>
 			</div>
 		</header>
