--- a/public/items/conflict/iraqi-shelter.html
+++ b/public/items/conflict/iraqi-shelter.html
@@ -58,7 +58,23 @@
 			<div class="item-pages">
 				<h2>Destroyed Shelter Piece</h2>
 					
-				<img class="item-image" src="iraqi-shelter.jpeg" alt="Caption">
+				<div class="thumbnail-container">
+					<img src="iraqi-shelter.jpeg" id="iraqi-shelter" alt="">
+		
+					<div class="expanded-thumbnail-container">
+						<img id="expandedIraqiShelter" style="width:100%">
+					</div>	
+		
+					<div class="thumbnail-row">
+						<div class="thumbnail-column">
+							<img src="iraqi-shelter.jpeg" alt="" onclick="showIraqiShelter(this);">	
+						</div>
+								
+						<div class="thumbnail-column">
+							<img src="iraqi-shelter-2.jpeg" alt="" onclick="showIraqiShelter(this);">
+						</div>
+					</div>
+				</div>
 
 				<div class="item-text-block">
 					<p class="item-text">
@@ -96,4 +112,6 @@
 		<script src='https://code.jquery.com/jquery-latest.min.js'></script>
 		
 		<script src="../../js/script.js"></script>
+
+		<script src="../../js/items.js"></script>
 	</body>
