--- a/public/items/conflict/sniper-sign.html
+++ b/public/items/conflict/sniper-sign.html
@@ -58,8 +58,24 @@
 			<div class="item-pages">
 				<h2>Sniper Warning Signs</h2>
 
-				<img class="item-image" src="sniper-sign.jpeg" alt="Caption">
-
+				<div class="thumbnail-container">
+					<img src="sniper-sign.jpeg" id="sniper-sign" alt="">
+	
+					<div class="expanded-thumbnail-container">
+						<img id="expandedSniperSign" style="width:100%">
+					</div>	
+		
+					<div class="thumbnail-row">
+						<div class="thumbnail-column">
+							<img src="sniper-sign.jpeg" alt="" onclick="showSniperSign(this);">	
+						</div>
+								
+						<div class="thumbnail-column">
+							<img src="sniper-sign-2.jpeg" alt="" onclick="showSniperSign(this);">
+						</div>
+					</div>
+				</div>
+				
 				<div class="item-text-block">
 					<p class="item-text">
 						This sign was posted outside a building on Cobanija Street in downtown Sarajevo. It was at a very busy 
@@ -103,5 +119,7 @@
 		<script src='https://code.jquery.com/jquery-latest.min.js'></script>
 		
 		<script src="../../js/script.js"></script>
+
+		<script src="../../js/items.js"></script>
 	</body>
 </html>
