--- a/public/items/conflict/taliban-leather-strap.html
+++ b/public/items/conflict/taliban-leather-strap.html
@@ -58,8 +58,24 @@
 			<div class="item-pages">
 				<h2>Taliban Leather Strap</h2>
 
-				<img class="item-image" src="taliban-leather-strap.jpeg" alt="Caption">
-
+				<div class="thumbnail-container">
+					<img src="taliban-leather-strap.jpeg" id="leather-strap" alt="">
+		
+					<div class="expanded-thumbnail-container">
+						<img id="expandedLeatherStrap" style="width:100%">
+					</div>	
+		
+					<div class="thumbnail-row">
+						<div class="thumbnail-column">
+							<img src="taliban-leather-strap.jpeg" alt="" onclick="showLeatherStrap(this);">	
+						</div>
+								
+						<div class="thumbnail-column">
+							<img src="taliban-leather-strap-2.jpeg" alt="" onclick="showLeatherStrap(this);">
+						</div>
+					</div>
+				</div>
+				
 				<div class="item-text-block">
 					<p class="item-text">
                         Add text.
@@ -96,5 +112,7 @@
 		<script src='https://code.jquery.com/jquery-latest.min.js'></script>
 		
 		<script src="../../js/script.js"></script>
+
+		<script src="../../js/items.js"></script>
 	</body>
 </html>
