--- a/public/memorabilia-hidden.html
+++ b/public/memorabilia-hidden.html
@@ -129,6 +129,14 @@
         
                 <div class="item-label">Iraqi Palace Wall Carving</div>
             </div>
+
+            <div class="gallery-layout">
+                <div class="gallery-item">
+                    <a href="items/hidden/hillary-t-shirt.html"><img src="items/hidden/hillary-t-shirt.jpeg"></a>
+                </div>
+            
+                <div class="item-label">Hillary Clinton T-Shirt</div>
+            </div>
         </div>
     </div>    
 
