--- a/public/items/conflict/olympic-jerseys.html
+++ b/public/items/conflict/olympic-jerseys.html
@@ -58,8 +58,24 @@
 			<div class="item-pages">
 				<h2>Sarajevo Olympic Jerseys</h2>
 
-				<img class="item-image" src="olympic-jerseys.jpeg" alt="Caption">
-
+				<div class="thumbnail-container">
+					<img src="olympic-jerseys.jpeg" id="olympic-jerseys" alt="">
+		
+					<div class="expanded-thumbnail-container">
+						<img id="expandedOlympicJerseys" style="width:100%">
+					</div>	
+		
+					<div class="thumbnail-row">
+						<div class="thumbnail-column">
+							<img src="olympic-jerseys.jpeg" alt="" onclick="showOlympicJerseys(this);">	
+						</div>
+								
+						<div class="thumbnail-column">
+							<img src="olympic-jerseys-2.jpeg" alt="" onclick="showOlympicJerseys(this);">
+						</div>
+					</div>
+				</div>
+	
 				<div class="item-text-block">
 					<p class="item-text">
 						Add text.
@@ -96,5 +112,7 @@
 		<script src='https://code.jquery.com/jquery-latest.min.js'></script>
 		
 		<script src="../../js/script.js"></script>
+
+		<script src="../../js/items.js"></script>
 	</body>
 </html>
