--- a/public/items/hidden/palace-wall-carving.html
+++ b/public/items/hidden/palace-wall-carving.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 	<head>
-   		<title>Palace Wall Carving</title>
+   		<title>Iraqi Palace Wall Carving</title>
 
 		<!-- external CSS link -->
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
@@ -52,11 +52,11 @@
 			</div>
 
 			<div>
-                <p class="next-item"><span class="red">Scroll&colon;</span> <a href="palace-door-handles.html">Last Item</a></p>
+                <p class="next-item"><span class="red">Scroll&colon;</span> <a href="palace-door-handles.html">Last Item</a> . . . <a href="hillary-t-shirt.html"> Next Item</a></p>
             </div>
 
 			<div class="item-pages">
-				<h2>Palace Wall Carving</h2>
+				<h2>Iraqi Palace Wall Carving</h2>
 
 				<img class="item-image" src="palace-wall-carving.jpeg" alt="Caption">
 
