--- a/public/items/politics/nixon-presidential-seal.html
+++ b/public/items/politics/nixon-presidential-seal.html
@@ -57,14 +57,47 @@
 
 			<div class="item-pages">
 				<h2>Nixon Presidential Seal</h2>
-					
-				<img class="item-image" src="nixon-presidential-seal.jpeg" alt="Caption">
 
-				<div class="item-text-block">
-					<p>
-						This seal was originally from the Nixon Library. It’s made from wood and is (get size). 
-					</p>
-				</div>
+				<div class="item-block-overflow">	
+					<img class="item-image-overflow" src="nixon-presidential-seal.jpeg" alt="Caption">
+
+					<div class="item-text-block-overflow">
+						<p class="item-text-overflow">
+							This seal was originally from the Nixon Library. It’s made from wood and is (get size). 
+							<br><br>
+							The Presidential Seal is the official Coat of Arms of the Presidency and appears on the official Presidential Flag.
+							The complete history of the seal is uncertain, but the current design can be traced back to 1877.
+							<br><br>
+							The first documented design work on the seal was in 1850. Millard Filmore was president and he proposed a design using
+							most of the elements of today's seal. Prior to that time the president of the Continental Congress used a smaller seal
+							to mark all correspondence from his office.
+							<br><br>
+							President Andrew Jackson used a similar seal during his administration, but actual details of the design have been lost.
+							The first president to actually use a form of the seal was Rutherford B. Hayes. He put the seal on invitations to White
+							House functions.
+							<br><br>
+							When Harry Truman became president in 1945, he started to make changes in the government. Those changes included a
+							redesign of the presidential seal. When Truman took office, the seal included the president's coat of arms, an eagle, a
+							ring of stars and the words "Seal of the President of the United States". The eagle's right talon is clutching an olive
+							branch, signifying peace, and in the left talon are arrows, representing war. The eagle's head was facing towards the
+							side with the arrows. Since the country had just been through a war, the president wanted to make the eagle's head face
+							the olive branch instead of the arrows. The changes were made and, with the addition of more stars when states joined
+							the Union, it is the design that is in use today.
+							<br><br>
+							A description of the seal from a White House website explains, the eagle's right talon clutches an olive branch with
+							thirteen olives and thirteen leaves to represent peace. The left talon clutches arrows which represents the need 
+							sometimes to go to war to protect the nation. The eagle holds a ribbon bearing the words "E Pluribus Unum", the motto
+							of the U.S., which means "out of many, one" (the thirteen olives and thirteen leaves represent the original thirteen
+							colonies).
+							<br><br>
+							A shield in front of the eagle has thirteen red and white stripes, again representing the colonies, with a blue bar
+							above, representing a unity of colonies into one nation and Congress, which makes laws for all. Above the eagle is a 
+							"glory Or" or halo of gold. In it are thirteen white clouds, thirteen white stars and many tiny stars. The fifty stars on
+							a field of deep blue circle the eagle and represent the fifty states. The words "Seal of the President of the United States"
+							surround the seal on a tan field.
+						</p>
+					</div>
+				</div>	
 			</div>		
 		</div>
 
