added heath invitation

--- a/public/items/politics/1972-reagan-luncheon-invitation.html
+++ b/public/items/politics/1972-reagan-luncheon-invitation.html
@@ -57,17 +57,25 @@
 
 			<div class="item-pages">
 				<h2>1972 Governor Reagan Luncheon Invitation</h2>
-					
-				<img id="reaganLuncheonInvitation" class="item-image" src="1972-reagan-luncheon-invitation.jpeg" width="300" height="200" alt="Caption">
+				
+				<div class="item-block-overflow">
+					<img id="reaganLuncheonInvitation" class="item-image-overflow" src="1972-reagan-luncheon-invitation.jpeg" width="300" height="200" alt="Caption">
 
-				<div class="item-text-block">
-					<p class="item-text">
-						This invitation was for a luncheon held at 10 Downing Street on July 17, 1972. The event was hosted by British 
-						Prime Minister Edward Heath. Ronald Reagan, Governor of California at the time, was on a twenty-day European trip, 
-						taken on behalf of President Richard Nixon. Reagan was visiting world leaders in European capital cities. While 
-						Reagan was on the trip, President Nixon was occupied with the Watergate break in that had taken place one month earlier. 
-					</p>
-				</div>
+					<div class="item-text-block-overflow">
+						<p class="item-text-overflow">
+							This invitation was for a luncheon held at 10 Downing Street on July 17, 1972. The event was hosted by British 
+							Prime Minister Edward Heath. Ronald Reagan, Governor of California at the time, was on a twenty-day European trip, 
+							taken on behalf of President Richard Nixon. Reagan was visiting world leaders in European capital cities. While 
+							Reagan was on the trip, President Nixon was occupied with the Watergate break in that had taken place one month earlier.
+							<br><br>
+							On an interesting side note, this luncheon is where Ronald Reagan is thought to have met Margaret Thatcher, a member of
+							Prime Minister Heath's Cabinet, for the first time. Three years later Thatcher would replace Heath as party leader and in
+							1979 she would become Prime Minister. Thatcher and Reagan held very similar political views and became close
+							friends. Prime Minister Thatcher was the first world leader Reagan would invite to visit the White House after he became
+							president. Margaret Thatcher also gave an emotional speech at Reagan's funeral.
+						</p>
+					</div>
+				</div>	
 			</div>	
 		</div>
 
