added seal photo

--- a/public/items/politics/nixon-presidential-seal.html
+++ b/public/items/politics/nixon-presidential-seal.html
@@ -68,8 +68,15 @@
 							<br><br>
 							The presidential seal is the official coat of arms of the presidency and appears on the official presidential flag.
 							The complete history of the seal is uncertain, but the current design can be traced back to 1850. Millard Fillmore was 
-							president and he proposed a design with elements vaguely similar to today's seal. In 1877 President Rutherford B. Hayes 
-							made additional changes and that design is considered the precursor to the modern presidential seal.
+							president and he proposed a design with elements vaguely similar to today's seal. 
+							
+							<div>
+								<img id="presidential-seal" src="../../images/Galleries/us-presidential-seal-1850.png">
+								<p id="seal-caption">1850 Presidential Seal</p>
+							</div>
+
+							In 1877 President Rutherford B. Hayes made additional changes and that design is considered the precursor to the modern 
+							presidential seal.
 							<br><br>
 							When Harry Truman became president in 1945, he started to make changes in the government. Those changes included a
 							redesign of the presidential seal. When Truman took office, the seal included the president's coat of arms, an eagle, a
