reagan-luncheon photos

--- a/public/items/politics/1972-reagan-luncheon-invitation.html
+++ b/public/items/politics/1972-reagan-luncheon-invitation.html
@@ -67,12 +67,24 @@
 							Prime Minister Edward Heath. Ronald Reagan, Governor of California at the time, was on a twenty-day European trip, 
 							taken on behalf of President Richard Nixon. Reagan was visiting world leaders in European capital cities. While 
 							Reagan was on the trip, President Nixon was occupied with the Watergate break in that had taken place one month earlier.
-							<br><br>
+
+							<div class="item-description-photo">
+								<img src="../../images/Galleries/reagans-heath.jpeg">
+								<p>The Reagans & Prime Minister Heath, 
+									<br>
+									July 17, 1972</p>
+							</div>
+
 							On an interesting side note, this luncheon is where Ronald Reagan is thought to have met Margaret Thatcher, a member of
 							Prime Minister Heath's Cabinet, for the first time. Three years later Thatcher would replace Heath as party leader and in
 							1979 she would become Prime Minister. Thatcher and Reagan held very similar political views and became close
 							friends. Prime Minister Thatcher was the first world leader Reagan would invite to visit the White House after he became
-							president. Margaret Thatcher also gave an emotional speech at Reagan's funeral.
+							president. Margaret Thatcher was one of three people to deliver a eulogy at Reagan's funeral.
+
+							<div class="item-description-photo">
+								<img src="../../images/Galleries/thatcher-reagan-funeral.jpeg">
+								<p>Margaret Thatcher at Reagan's Funeral</p>
+							</div>
 						</p>
 					</div>
 				</div>	
