--- a/public/newsgatheringtools.html
+++ b/public/newsgatheringtools.html
@@ -3,6 +3,8 @@
    		<title>Newsgathering Tools</title>
 
 		<!-- external CSS link -->
+		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+
 		<link rel="stylesheet" href="css/reset.css">
 		<link rel="stylesheet" href="css/mobile.css">
 		<link rel="stylesheet" href="css/tablet.css">
@@ -45,13 +47,39 @@
 			</ul>
 		</nav>
 
-		<div>
-			<p class="gallery-section-intro"></p>
-		</div>
+		<div class="container equipment">
+			<div>
+				<p class="gallery-section-intro">Intro text</p>
+			</div>
+			
+			<div class="row">
+				<div class="col-med equipment-label-box">
+					<img class="equipment-category" src="images/Galleries/set-camera.jpeg">
+					
+					<p class="equipment-label">Cameras</p>
+				</div>
 
-		<div>
-			<!-- <img class="centered-image" src="images/Graphics/camera-mask.jpeg"> -->
-		</div>	
+				<div class="col-med equipment-label-box">
+					<img class="equipment-category" src="images/Galleries/piers-morgan-set.jpeg">
+
+					<p class="equipment-label">Lights</p>
+				</div>
+			</div>
+
+			<div class="row">
+				<div class="col-med equipment-label-box">
+					<img class="equipment-category" src="images/Galleries/cnn-edit-bay-la-1992.jpeg">
+
+					<p class="equipment-label">Decks</p>
+				</div>
+
+				<div class="col-med equipment-label-box">
+					<img class="equipment-category" src="images/Galleries/van.jpeg">
+
+					<p class="equipment-label">Other</p>
+				</div>
+			</div>
+		</div>
 
 		<footer class="clear">
 
