--- a/public/newsgatheringtools.html
+++ b/public/newsgatheringtools.html
@@ -54,13 +54,13 @@
 			
 			<div class="row">
 				<div class="col-med equipment-label-box">
-					<img class="equipment-category" src="images/Galleries/set-camera.jpeg">
+					<a href="equipment/cameras.html"><img class="equipment-category" src="images/Galleries/set-camera.jpeg"></a>
 					
 					<p class="equipment-label">Cameras</p>
 				</div>
 
 				<div class="col-med equipment-label-box">
-					<img class="equipment-category" src="images/Galleries/piers-morgan-set.jpeg">
+					<a href="equipment/lighting.html"><img class="equipment-category" src="images/Galleries/piers-morgan-set.jpeg"></a>
 
 					<p class="equipment-label">Lights</p>
 				</div>
@@ -68,13 +68,13 @@
 
 			<div class="row">
 				<div class="col-med equipment-label-box">
-					<img class="equipment-category" src="images/Galleries/cnn-edit-bay-la-1992.jpeg">
+					<a href="equipment/decks.html"><img class="equipment-category" src="images/Galleries/cnn-edit-bay-la-1992.jpeg"></a>
 
 					<p class="equipment-label">Decks</p>
 				</div>
 
 				<div class="col-med equipment-label-box">
-					<img class="equipment-category" src="images/Galleries/van.jpeg">
+					<a href="equipment/other-equipment.html"><img class="equipment-category" src="images/Galleries/van.jpeg"></a>
 
 					<p class="equipment-label">Other</p>
 				</div>
