added convention photos

--- a/public/items/conflict/iraqi-freedom-flag.html
+++ b/public/items/conflict/iraqi-freedom-flag.html
@@ -57,13 +57,32 @@
 
 			<div class="item-pages">
 				<h2>Operation Iraqi Freedom Flag</h2>
-					
-				<img class="item-image" src="iraqi-freedom-flag.jpeg" alt="Caption">
 
-				<div class="item-text-block">
-					<p class="item-text">
-						Add text.
-					</p>
+				<div class="item-block-overflow">
+					<img class="item-image-overflow" src="iraqi-freedom-flag.jpeg" alt="Caption">
+
+					<div class="item-text-block-overflow">
+						<p class="item-text">
+							This is a battle flag of a U.S. military unit involved in Operation Enduring Freedom, which was the first
+							phase of the 2003 Iraq War, beginning on March 20, 2003 and lasting until April 9, 2003. It included
+							twenty-one days of major combat operations, or "shock and awe", involving 177,174 troops. Of that number,
+							130,000 were American.
+
+							<div class="item-description-photo">
+								<img src="../news-photos/us-tanks-baghdad.jpeg">
+								<p>U.S. tanks in Baghdad</p>
+							</div>
+
+							On May 1, 2003, President George W. Bush declared "the end to major combat operations". I was embedded with
+							a Special Forces Unit that was tasked with finding weapons of mass destruction. We were first deployed to
+							Basra, but eventually made it to Baghdad. We never encountered any WMD.
+							
+							<div class="item-description-photo">
+								<img src="../news-photos/mission-accomplished-speech.jpeg">
+								<p>President Bush giving "Mission Accomplished" speech</p>
+							</div>
+						</p>
+					</div>	
 				</div>	
 			</div>		
 		</div>
