--- a/public/items/politics/1972-reagan-luncheon-invitation.html
+++ b/public/items/politics/1972-reagan-luncheon-invitation.html
@@ -69,7 +69,7 @@
 							Reagan was on the trip, President Nixon was occupied with the Watergate break in that had taken place one month earlier.
 
 							<div class="item-description-photo">
-								<img src="../../images/Galleries/reagans-heath.jpeg">
+								<img src="../news-photos/reagans-heath.jpeg">
 								<p>The Reagans & Prime Minister Heath, 
 									<br>
 									July 17, 1972</p>
@@ -82,7 +82,7 @@
 							president. Margaret Thatcher was one of three people to deliver a eulogy at Reagan's funeral.
 
 							<div class="item-description-photo">
-								<img src="../../images/Galleries/thatcher-reagan-funeral.jpeg">
+								<img src="../news-photos/thatcher-reagan-funeral.jpeg">
 								<p>Margaret Thatcher at Reagan's Funeral</p>
 							</div>
 						</p>
