--- a/public/items/politics/nixon-presidential-seal.html
+++ b/public/items/politics/nixon-presidential-seal.html
@@ -71,7 +71,7 @@
 							president and he proposed a design with elements vaguely similar to today's seal. 
 							
 							<div>
-								<img id="presidential-seal" src="../../images/Galleries/us-presidential-seal-1850.png">
+								<img id="presidential-seal" src="../news-photos/us-presidential-seal-1850.png">
 								<p id="seal-caption">1850 Presidential Seal</p>
 							</div>
 
