--- a/public/memorabilia-conflict-balkans.html
+++ b/public/memorabilia-conflict-balkans.html
@@ -52,7 +52,22 @@
 				<p class="navigation-bar"><span class="red">Go Back&colon;</span><a href="memorabilia.html"> Memorabilia</a> &gt; <a href="memorabilia-conflict.html">Conflict</a></p>
 			</div>
 
-			<p class="gallery-section-intro">Add text.</p>
+			<p class="gallery-section-intro">
+				With the reunification of Germany after the fall of the Berlin Wall and the collapse of communism in the former Soviet Union,
+				there was a widespread belief that the Cold War was over and a "peace dividend" was on the horizon. Unfortunately, it was a 
+				short-term belief. The first major setback ocurred when Saddam Hussein invaded Kuwait. The Gulf War followed and took a chunk
+				out of the perceived dividend. As soon as hostilities ceased in the Gulf, unrest gave way to war in the Balkans.
+				<br><br>
+				At the end of the Cold War, the former Socialist Federal Republic of Yugoslavia began to dissolve. When Slovenia and Croatia 
+				sought to become independent from Yugoslavia on June 25, 1991, the conflicts began. A ten-day war in Slovenia was followed by 
+				all-out warfare in Croatia. The bulk of the Croatian fighting lasted until a U.N.-brokered ceasefire took effect 
+				on January 4, 1992 (small skirmishes continued until 1995).
+				<br><br>
+				The stage was set for Bosnia-Herzegovina. They declared independence and on April 6, 1992 fighting broke out on the streets 
+				of Sarajevo. The war continued until December of 1995. I became part of the CNN coverage team after our camerawoman, 
+				Margaret Moth, was wounded by sniper fire and nearly died. I rotated in and out of the war until the end of the armed conflict.
+				Most of the following items were acquired during that period.
+			</p>
 
 			<div class="photo-row">
 				<div>
