--- a/public/memorabilia-conflict-gulf-wars.html
+++ b/public/memorabilia-conflict-gulf-wars.html
@@ -82,7 +82,14 @@
 			</div>
 		
 			<div>
-				<p class="gallery-section-intro">Row 1: Iraqi baby milk factory bombed during the First Gulf War; CNN truck with local staff; Amiriyah bomb shelter in Baghdad, destroyed on February 13, 1991; Row 2: Press Embed Training at Fort Benning, Georgia; Toppled statue of Saddam Hussein after the 2003 invasion; U.S. soldiers during the Second Gulf War.</p>
+				<p class="gallery-section-intro">
+					Top Row: The famous baby milk factory suspected as a chemical weapons plant;
+					CNN truck used to transport satellite dish to Baghdad (I am standing next to Abu Jawad, the driver, and Cyndi Strand, the other cameraperson in Iraq);
+					Amiriyah Bomb Shelter that was targeted by U.S. forces on February 13, 1991; 
+					Bottom Row: Media Embed Training at Fort Benning, Georgia; 
+					Toppled statue of Saddam Hussein after U.S. troops arrived in downtown Baghdad; 
+					U.S. ground troops around CNN transmission vehicle during the 2003 invasion of Iraq.
+				</p>
 			</div>
 
 			<div>
